# faceID

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  build_yolov8.sh  deploy.sh  run.sh  run_test.sh
cmake/: scrfdConfig.cmake  yolov8Config.cmake  yolov8ConfigVersion.cmake
config/: blue_dog.json  default.json  red_dog.json  white_dog.json
data/crop/: crop_zzk.txt
data/known_people/: database-resnet50.json  name2id.json
include/: cmd_listener.h  cuda_utils.h  face_alignment.h  face_feature.h  face_id_thread.h  face_matcher.h  face_recognizer.h  face_register.h  ipm.h  myPinyin.h  my_thread.h  name_matching.h  ros_adapter.h  scrfd.h  scrfd_cuda.h  simple_yolo.h  simple_yolo_cuda.h  tool.hpp
lib/: libsimple_yolo_cuda.so.  libyolov8.so.  libyolov8_cuda.so.
ros1_interface/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros1_interface/devel/include/eye_msgs/: EyeCmd.h  EyeState.h
ros1_interface/devel/include/perception_msgs/: PercCmd.h  PercReq.h
ros1_interface/devel/include/ros_interface/: BBox2D.h  Body.h  BodyList.h  ComplexCommand.h  Face.h  FaceList.h  FreeSpace.h  FusedLocalization.h  Gesture.h  Gnss.h  Header.h  Image.h  Imu.h  Obstacle.h  ObstacleList.h  OccGrid.h  Odometry.h  PercCmd.h  PercReq.h  PercState.h  Point.h  Point3D.h  PointCloud2.h  PointENU.h  PointField.h  PointLLH.h  Polygon3D.h  PoseWithCovariance.h  QuadbotCmd.h  QuadbotState.h  Quaternion.h  RobotEnd.h  RobotPlan.h  RobotTwist.h  Terrain.h  Time.h  Twist.h  TwistWithCovariance.h  VIOOdom.h  Vector3.h
ros1_interface/devel/lib/pkgconfig/: eye_msgs.pc  perception_msgs.pc  ros_interface.pc
ros1_interface/devel/lib/python3/dist-packages/eye_msgs/msg/: _EyeCmd.py  _EyeState.py  __init__.py
ros1_interface/devel/lib/python3/dist-packages/perception_msgs/msg/: _PercCmd.py  _PercReq.py  __init__.py
ros1_interface/devel/lib/python3/dist-packages/ros_interface/msg/: _BBox2D.py  _Body.py  _BodyList.py  _ComplexCommand.py  _Face.py  _FaceList.py  _FreeSpace.py  _FusedLocalization.py  _Gesture.py  _Gnss.py  _Header.py  _Image.py  _Imu.py  _Obstacle.py  _ObstacleList.py  _OccGrid.py  _Odometry.py  _PercCmd.py  _PercReq.py  _PercState.py  _Point.py  _Point3D.py  _PointCloud2.py  _PointENU.py  _PointField.py  _PointLLH.py  _Polygon3D.py  _PoseWithCovariance.py  _QuadbotCmd.py  _QuadbotState.py  _Quaternion.py  _RobotEnd.py  _RobotPlan.py  _RobotTwist.py  _Terrain.py  _Time.py  _Twist.py  _TwistWithCovariance.py  _VIOOdom.py  _Vector3.py  (+1 more)
ros1_interface/devel/share/common-lisp/ros/eye_msgs/msg/: EyeCmd.lisp  EyeState.lisp  _package.lisp  _package_EyeCmd.lisp  _package_EyeState.lisp  eye_msgs-msg.asd
ros1_interface/devel/share/common-lisp/ros/perception_msgs/msg/: PercCmd.lisp  PercReq.lisp  _package.lisp  perception_msgs-msg.asd
ros1_interface/devel/share/common-lisp/ros/ros_interface/msg/: BBox2D.lisp  Body.lisp  BodyList.lisp  ComplexCommand.lisp  Face.lisp  FaceList.lisp  FreeSpace.lisp  FusedLocalization.lisp  Gesture.lisp  Gnss.lisp  Header.lisp  Image.lisp  Imu.lisp  Obstacle.lisp  ObstacleList.lisp  OccGrid.lisp  Odometry.lisp  PercCmd.lisp  PercReq.lisp  PercState.lisp  Point.lisp  Point3D.lisp  PointCloud2.lisp  PointENU.lisp  PointField.lisp  PointLLH.lisp  Polygon3D.lisp  PoseWithCovariance.lisp  QuadbotCmd.lisp  QuadbotState.lisp  Quaternion.lisp  RobotEnd.lisp  RobotPlan.lisp  RobotTwist.lisp  Terrain.lisp  Time.lisp  Twist.lisp  TwistWithCovariance.lisp  VIOOdom.lisp  Vector3.lisp  (+30 more)
ros1_interface/devel/share/eye_msgs/cmake/: eye_msgs-msg-extras.cmake  eye_msgs-msg-paths.cmake  eye_msgsConfig.cmake
ros1_interface/devel/share/gennodejs/ros/eye_msgs/msg/: EyeCmd.js  EyeState.js  _index.js
ros1_interface/devel/share/gennodejs/ros/perception_msgs/msg/: PercCmd.js  PercReq.js  _index.js
ros1_interface/devel/share/gennodejs/ros/ros_interface/msg/: BBox2D.js  Body.js  BodyList.js  ComplexCommand.js  Face.js  FaceList.js  (+35 more)
ros1_interface/devel/share/perception_msgs/cmake/: perception_msgs-msg-extras.cmake  perception_msgs-msg-paths.cmake  perception_msgsConfig.cmake
ros1_interface/devel/share/ros_interface/cmake/: ros_interface-msg-extras.cmake  ros_interface-msg-paths.cmake  ros_interfaceConfig.cmake
ros1_interface/devel/share/roseus/ros/eye_msgs/: manifest.l
ros1_interface/devel/share/roseus/ros/perception_msgs/: manifest.l
ros1_interface/devel/share/roseus/ros/ros_interface/: manifest.l
ros1_interface/src/eye_msgs/: CMakeLists.txt  package.xml
ros1_interface/src/eye_msgs/msg/: EyeCmd.msg  EyeState.msg
ros1_interface/src/perception_msgs/: CMakeLists.txt
ros1_interface/src/perception_msgs/msg/: PercCmd.msg  PercReq.msg
ros1_interface/src/ros_interface/: CMakeLists.txt  package.xml
ros1_interface/src/ros_interface/msg/: BBox2D.msg  Body.msg  BodyList.msg  ComplexCommand.msg  Face.msg  FaceList.msg  FreeSpace.msg  FusedLocalization.msg  Gesture.msg  Gnss.msg  Header.msg  Image.msg  Imu.msg  Obstacle.msg  ObstacleList.msg  OccGrid.msg  Odometry.msg  PercCmd.msg  PercReq.msg  PercState.msg  Point3D.msg  PointCloud2.msg  PointField.msg  PointLLH.msg  QuadbotCmd.msg  QuadbotState.msg  Quaternion.msg  RobotEnd.msg  RobotPlan.msg  RobotTwist.msg  Terrain.msg  Time.msg  Twist.msg  TwistWithCovariance.msg  VIOOdom.msg
samples/: sample1_unittest.cpp  sample2_unittest.cpp
src/: cmd_listener.cpp  cuda_utils.cu  faceID.cpp  face_alignment.cpp  face_detect_test.cpp  face_feature.cu  face_feature_test.cpp  face_id_thread.cpp  face_matcher.cpp  face_matcher_test.cpp  face_recognizer.cpp  face_recognizer_test.cpp  face_register.cpp  ipm.cpp  main.cpp  myPinyin.cpp  my_thread.cpp  name_matching.cpp  ros_adapter.cpp  scrfd.cu  scrfd_cuda.cu  simple_yolo.cu  simple_yolo_cuda.cu  yolo_gpu_test.cpp  yolo_test.cpp
utils/: calibration_tools.py  cmd_pub.py  crop.py  parse_rosbag.py  read_tensor.py  record.sh  rosbag_replay.py
weights/: det_10g.engine.fp16  resnet50.engine.fp32  resnet50.onnx  yolov11m-pose.engine.fp16  yolov11m-pose.onnx
workspace/: faceID  run.sh  run_test.sh  sample1_unittest  sample2_unittest  yolo_gpu_test  yolo_test
(+44 files in other folders)
